--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,24 @@
-psycopg2-binary
-django
-django-cockroachdb
-dj-database-url
+aiohttp==3.8.1
+aiosignal==1.2.0
+asgiref==3.5.0
+async-timeout==4.0.2
+attrs==21.4.0
+backports.zoneinfo==0.2.1
+cffi==1.15.0
+charset-normalizer==2.0.11
+cryptography==36.0.1
+dj-database-url==0.5.0
+Django==4.0.2
+django-cockroachdb==4.0
+frozenlist==1.3.0
+gidgethub==4.1.0
+gunicorn==20.1.0
+idna==3.3
+multidict==6.0.2
+pkg_resources==0.0.0
+psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.3.0
+sqlparse==0.4.2
+uritemplate==4.1.1
+yarl==1.7.2
